--- a/eks-cluster-ec2/k8s-files/basic-k8s-objects/pod.yml
+++ b/eks-cluster-ec2/k8s-files/basic-k8s-objects/pod.yml
@@ -4,7 +4,7 @@ metadata:
   name: jjtech-pod
   namespace: application
   labels:
-    app: my-app
+    app: myapp
     run: nginx
 spec:
   containers:
